--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,8 @@
 <h1>Contact Me</h1>
-<p>Tel: 8122051916</p>
-<p>Email: keerthibala2017@gmail.com</p>
+<p>Tel: +1234567890</p>
+<p>Email: testmail@gmail.com</p>
 <p>Address:</p>
 <p>
-  Padur<br />
   Chennai<br />
   Tamil Nadu<br />
   India<br />
